[gd_scene load_steps=9 format=2]

[ext_resource path="res://textures/Enemies/Enemy1.png" type="Texture" id=1]
[ext_resource path="res://scenes/ENTITIES/Enemy1.gd" type="Script" id=2]
[ext_resource path="res://scenes/ENTITIES/HealthbarEnemy.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.6
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "run"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 2 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5, 5.03009 )

[node name="Enemy1" type="KinematicBody2D"]
z_index = 3
collision_layer = 2147483648
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 9

[node name="animation" type="AnimationPlayer" parent="."]
anims/hurt = SubResource( 1 )
anims/idle = SubResource( 2 )
anims/run = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 4 )
shape = SubResource( 4 )

[node name="top_wall" type="RayCast2D" parent="."]
visible = false
position = Vector2( -4, 4 )
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 12 )

[node name="top_wall2" type="RayCast2D" parent="."]
visible = false
position = Vector2( 3, 4 )
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 12 )

[node name="bottom_wall" type="RayCast2D" parent="."]
visible = false
position = Vector2( -4, 4 )
enabled = true
cast_to = Vector2( 0, 6 )

[node name="bottom_wall2" type="RayCast2D" parent="."]
visible = false
position = Vector2( 3, 4 )
enabled = true
cast_to = Vector2( 0, 6 )

[node name="aggro_timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 64
collision_mask = 2048

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, 1 )
shape = SubResource( 5 )

[node name="attack_cooldown" type="Timer" parent="."]
one_shot = true

[node name="Healthbar" parent="." instance=ExtResource( 3 )]
margin_top = -10.0
margin_right = 12.0
margin_bottom = -8.0
[connection signal="timeout" from="aggro_timer" to="." method="_on_aggro_timer_timeout"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="hitbox" to="." method="_on_hitbox_area_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
